# PureCamera

./: README.md  build.gradle  config.gradle  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/filter/: filter.cpp  filter.h  filter_load.cpp  imageproc.cpp  imageproc.h  jni_log.h
app/src/main/jni/util/: convert.cpp  convert.h
app/src/main/res/layout/: layout_setting.xml  main.xml  video_tips.xml
app/src/main/res/raw/: camera_preview_fragment.glsl  camera_preview_vertex.glsl  filter_border_vertex.glsl  filter_fragment_shader.glsl  small_camera_preview_fragment.glsl
app/src/main/res/values/: arrays.xml  setting_strings.xml  strings.xml  styles.xml
app/src/main/res/values-zh-rCN/: setting_strings.xml  strings.xml
commonbase/src/main/: AndroidManifest.xml
gallery/: build.gradle
gallery/src/main/: AndroidManifest.xml
gallery/src/main/module/: AndroidManifest.xml
gallery/src/main/res/anim/: anim_popup_window_in.xml  anim_popup_window_out.xml
gallery/src/main/res/drawable/: checkbox_bac.xml  circle_button_black.xml  circle_button_blue.xml  circle_button_gray.xml  circle_button_green.xml  circle_button_orange.xml  circle_button_red.xml  circle_button_white.xml  circle_button_yellow.xml  course_list_selector.xml  detail_dialog_background.xml  edit_able_tint.xml
gallery/src/main/res/layout/: activity_main.xml  bottom_controls.xml  crop_bottom_operation.xml  crop_image.xml  crop_image_view.xml  detail_item.xml  (+35 more)
(+241 files in other folders)
